Cleaned up files and final adjustment

--- a/early.html
+++ b/early.html
@@ -16,9 +16,17 @@
     <h1>
         Oops!
     </h1>
+    <h4>I didn't make this part yet... :(</h4>
+    <hr>
     <p>
-        I didn't make this part yet... :(
-            But the idea <a href="https://web.archive.org/web/20051231232736/http://www.clickboom.com/">is something like this</a>
+        But the idea is something like this: A fictional product page for a handheld camera from the early-to-mid 2000s sold by a spoof amalgam of Japanese consumer electronics brands.<br>
+        Lots of bitmap elements as page styling, rounded corners and shiny bezels on stuff - A throwback to the early days of webpages designed to wow people rather than really convey information effectively.<br>
     </p>
+    <h4>Here's a good example</h4>
+    <ul>
+        <li><a href="https://web.archive.org/web/20250403233905/http://www.clickboom.com/">Clickboom</a></li>
+    </ul>
+    <hr>
+    <p><small>Check back later for updates!</small></p>
 </body>
 </html>
