--- a/geo.html
+++ b/geo.html
@@ -119,14 +119,24 @@
                 <h2 id="quake" class="full">Welcome to the QUAKE Zone!</h2>
                 <img class="center full" src="img/geo/line.gif" alt="fancy line">
             </div>
-            <h3 class="full">Under Construction!</h3>
+            <h3 class="full">QUAKE Fans UNITE!</h3>
             <aside class="center">
                 <img src="img/undconst.gif" alt="Under Construction" style="height: 200px;">
             </aside>
             <div>
+                <div class="center full">
+                    <img src="img/geo/quake_spin.gif" alt="Quake Logo" style="max-height: 150px;">
+                </div>
                 <hr>
                 <p>Hi, thanks for checking out my webzone!</p>
-                <p>This page is currently under construction. Please check back later!</p>
+                <p>This page is and will be under construction!. Save a link to my page and check back frequently!</p>
+                <hr>
+                <p>Quake is a first-person shooter (FPS, for those not down with the lingo...) video game developed by id Software and published a few years ago by GT Interactive in 1996. 
+                    It is the first title in the Quake series and was originally released for MS-DOS, and I think it's still the best! Yeah sure I'll admit I'm excited for Quake 3 but who isn't?
+                    The a dark, gothic atmosphere, epic enemies, and cool weapons make this game a modern classic.
+                </p>
+                <hr>
+                <p>Feel free to explore the links below for more information on Quake mods, maps, and other fan sites dedicated to this awesome game!</p>
                 <hr>
             </div>
             <aside class="center">
@@ -163,7 +173,7 @@
                     <td style="text-align: left; font-size: 1rem;">
                             <a href="https://quakeone.com">quakeone.com</a> - The most popular QUAKE forum!<br>
                             <br>
-                            <a href="">A</a> - AAA <br>
+                            <a href="https://icculus.org/twilight/darkplaces/">icculus.org/twilight/darkplaces</a> - The EPIC QUAKE mod by LadyHavoc with 32bit color depth! <br>
                             <br>
                             <a href="http://facelift.quakedev.com/">facelift.quakedev.com</a> - the Quake Revitalization
                             project page<br>
