--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="flex flex-col bg-white px-6 py-3 rounded-md shadow-md">
                     <h2 class="text-xl">Attributions</h2>
                     <hr>
-                    <div class="flex md:flex-row sm:flex-col gap-4 w-full max-w-1/2">
+                    <!-- <div class="flex md:flex-row sm:flex-col gap-4 w-full max-w-1/2"> -->
                         <div class="flex-auto w-50 shrink">
                             <p class="text-wrap">
                                 As I'm very much a novice, I would not have been able to create any of these pages without using outside 
@@ -231,29 +231,41 @@
                                 that I found while creating this.
                             </p>
                         </div>
-
-                        <div class="flex-auto w-full max-w-1/2">
-                            <details class="cursor-pointer">
+                        <hr>
+                        <div class="flex flex-auto flex-row gap-4 w-full max-w-1/2">
+                            <details class="cursor-pointer flex-auto">
                             <summary>Attributions</summary>
-                                <ul>
+                                <ul class="text-blue-600">
                                     <li>
                                         <a href="https://archive.org/details/github.com-grassmunk-Chicago95_Extras_-_2021-02-23_17-07-06">Icons</a> from <a href="https://github.com/grassmunk/Chicago95/tree/master">The Chigago95 XFCE spin</a>
                                     </li>
                                     <li>
                                         A good deal of the <em>Neoscape</em> UI from <a href="https://gist.github.com/opaeoh/5fcdadb5bb2f701c7a5a94d79f97f856">netscape.html - A simple netscape UI in HTML</a> by <a href="https://github.com/opaeoh">opaeoh</a>
-                                    </li>                           
-                                    <li></li>                            
-                                    <li></li>
-                                    <li></li>
+                                    </li>
                                 </ul>
-                                <ul>
+                            </details>
+                            <details class="cursor-pointer flex-auto">
+                            <summary>Inspiration</summary>
+                                <h4 id="geocities">GeoCities</h4>
+                                <ul class="text-blue-600">
+                                    <li><a href="https://web.archive.org/web/20010330052109/http://webring.quake3hq.com/">Quake Webring</a></li>
+                                    <li><a href="https://icculus.org/twilight/darkplaces/technotes.html">Darkpaces Quake Mod Page</a></li>
+                                    <li><a href="joequake.runecentral.com">The JoeQuake mod</a></li>
+                                    <li><a href="https://quakeone.com">The Quakeone Forum</a></li>
+                                    <li><a href="https://web.archive.org/web/20090829050645/http://geocities.com/purplepeach/">The Purple Peach</a></li>
+                                    <li><a href="https://www.addbalance.com">DUI Lawyer&#39;s Personal Page - Addbalance</a></li>
+                                </ul>    
+                                <h4 id="web-2-0">Web 2.0</h4>
+                                <ul class="text-blue-600">
+                                    <li><a href="https://web.archive.org/web/20250403233905/http://www.clickboom.com/">Clickboom</a></li>
+                                    <li><a href="https://webaim.org">https://webaim.org</a></li>
+                                    <li><a href="https://web.archive.org/web/20080820125546/http://www.slipgatecentral.com/tutorials/browse/7/skilllevel/asc/1/">Slipgate Central / BioRUST2007</a></li>
+                                </ul>
+                                <h4 id="misc">Miscellaneous</h4>
+                                <ul class="text-blue-600">
                                     <li>
                                         <a href="https://www.cameronsworld.net">www.cameronsworld.net</a> - A love letter to GeoCities
                                     </li>
-                                    <li></li>                            
-                                    <li></li>                            
-                                    <li></li>
-                                    <li></li>
                                 </ul>
                             </details>
                         </div>
@@ -267,9 +279,13 @@
                 <p>Drop me a line at <a href="#">[email protected]</a>!</p>
             </section>
             <section class="mx-auto py-3 flex-auto bg-white rounded-md shadow-md">
-                <h2 class="text-lg">Other</h2>
+                <h2 class="text-lg">Plans for this page</h2>
                 <hr>
-                <p>Other</p>
+                <ul>
+                    <li>More pages emulating different eras of web design, including predictions for the future</li>
+                    <li>More external links to interesting old pages</li>
+                    <li>Better mobile support</li>
+                </ul>
             </section>
         </div>
         <div class="mx-auto w-full flex-grow mt-4 py-3 px-6 bg-white rounded-md shadow-md">
