--- a/landing.html
+++ b/landing.html
@@ -123,7 +123,9 @@
 						To learn more about this software, read the <b><a href="#about">About</a></b> section, or 
 						click the <b>Neoscape</b> logo at the right side of the <b>Ribbon Bar</b>.
 					</p>
-					<small>This software is subject to absolutely nothing, as set forth in the non-existent agreement.</small>					
+					<p>
+						<small>This software is subject to absolutely nothing, as set forth in the non-existent agreement.</small>
+					</p>
 				</nav>
 			</article>
 
@@ -185,6 +187,7 @@
 						<p>
 							This will take you back to the future, should you really wish to return.
 						</p>
+						<small>Click <a href="index.html">here</a> to jump back to the future if you came here by without your Neoscape browser!</small>
 					</div>
 					<div class="flex-item">
 						<p style="text-align: center;">
@@ -195,8 +198,8 @@
 							<small>(<b>This may be necessary to view linked external pages!</b>)</small>
 						</p>
 					</div>
-					
 				</div>
+				<p><small>If you have issues following links on any of these pages, use the <b>Window Butttons</b> or try opening in a new tab with a 'middle-click' if you have a newer pointing device with a clickable scrollwheel.</small></p>
 			</article>
 		</section>
 		<hr>
