Fixed and added some content

--- a/early.html
+++ b/early.html
@@ -24,7 +24,7 @@
     </p>
     <h4>Here's a good example</h4>
     <ul>
-        <li><a href="https://web.archive.org/web/20250403233905/http://www.clickboom.com/">Clickboom</a></li>
+        <li><a href="https://web.archive.org/web/20250403233905/http://www.clickboom.com/" target="_top">Clickboom</a></li>
     </ul>
     <hr>
     <p><small>Check back later for updates!</small></p>
