--- a/geo.html
+++ b/geo.html
@@ -53,9 +53,13 @@
             margin: 1em 0;
             padding: 0;     
         }
-
+        h1 {
+            font-family: "fantasy", "Impact", "Arial Black", "sans-serif";
+            font-size: 3em;
+            text-shadow: 3px 3px 3px #700000;
+        }
         .inner-table {
-            border: 0px;
+            border: 0;
             margin: 25px;
         }
         /* Media Queries */
@@ -100,7 +104,7 @@
         <table class="center">
             <tr>
                 <td><img src="img/geo/quakeworld.gif" alt="QUAKE" style="max-height: 100px;"></td>
-                <td><h1 id="#" class="center" style="font-family: fantasy; font-size: 3em; text-shadow: 3px 3px 3px#700000">The QUAKE Zone</h1></td>
+                <td><h1 id="#" class="center">The QUAKE Zone</h1></td>
                 <td><img src="img/geo/quakeworld.gif" alt="QUAKE" style="max-height: 100px"></td>
             </tr>
         </table>
@@ -136,7 +140,11 @@
                     The a dark, gothic atmosphere, epic enemies, and cool weapons make this game a modern classic.
                 </p>
                 <hr>
-                <p>Feel free to explore the links below for more information on Quake mods, maps, and other fan sites dedicated to this awesome game!</p>
+                <p>
+                    Feel free to explore the links below for more information on Quake mods, maps, and other fan sites dedicated to this awesome game!<br>
+                    <small>Also, check out my <a href="#about">About</a> section to learn more about this page and why I made it!</small>
+                </p>
+                <p>If you want to contact me, you can find me on usenet as nineinchnailsfan1988</p>
                 <hr>
             </div>
             <aside class="center">
@@ -158,7 +166,7 @@
             </div>
 
             <aside class="center">
-                <a href="http://joequake.runecentral.com/news.html" title="JoeQuake">
+                <a href="http://joequake.runecentral.com/news.html"  target="_top" title="JoeQuake">
                     <img src="img/geo/optimize.gif" alt="An advertisement for Quake modification software">
                 </a>
             </aside>
@@ -171,16 +179,16 @@
                 </tr>
                 <tr>
                     <td style="text-align: left; font-size: 1rem;">
-                            <a href="https://quakeone.com">quakeone.com</a> - The most popular QUAKE forum!<br>
-                            <br>
-                            <a href="https://icculus.org/twilight/darkplaces/">icculus.org/twilight/darkplaces</a> - The EPIC QUAKE mod by LadyHavoc with 32bit color depth! <br>
-                            <br>
-                            <a href="http://facelift.quakedev.com/">facelift.quakedev.com</a> - the Quake Revitalization
-                            project page<br>
-                            <br>
-                            <a href="http://qmb.quakepit.com">qmb.quakepit.com</a> - the QMB Project Page<br>
-                            <br>
-                            <a href="https://quake.speeddemosarchive.com/quake/">quake.speeddemosarchive.com/quake/</a> - Another way to play QUAKE<br>
+                        <a href="https://quakeone.com"  target="_top">quakeone.com</a> - The most popular QUAKE forum!<br>
+                        <br>
+                        <a href="https://icculus.org/twilight/darkplaces/" target="_top">icculus.org/twilight/darkplaces</a> - The EPIC QUAKE mod by LadyHavoc with 32bit color depth! <br>
+                        <br>
+                        <a href="http://facelift.quakedev.com/" target="_top">facelift.quakedev.com</a> - the Quake Revitalization
+                        project page<br>
+                        <br>
+                        <a href="http://qmb.quakepit.com" target="_top">qmb.quakepit.com</a> - the QMB Project Page<br>
+                        <br>
+                        <a href="https://quake.speeddemosarchive.com/quake/" target="_top">quake.speeddemosarchive.com/quake/</a> - Another way to play QUAKE<br>
                     </td>
                 </tr>
                 <tr>
@@ -192,14 +200,14 @@
 
             <aside style="text-align: center;" class="center">
                 <p>This WebZone is brought to you by:</p>
-                <a href="https://geocities.restorativland.org" title="The Best of GeoCities">
+                <a href="https://geocities.restorativland.org" target="_top" title="The Best of GeoCities">
                     <img src="img/geo/ygc.gif" alt="Geocities Banner">
                 </a>
-                <p><em>What was <a href="https://en.wikipedia.org/wiki/GeoCities">GeoCities?</a></em></p>
+                <p><em>What was <a href="https://en.wikipedia.org/wiki/GeoCities" target="_top">GeoCities?</a></em></p>
             </aside>
 
             <div class="center full">
-                <a href="https://www.gog.com/en/game/quake_the_offering" title="Get QUAKE for PC on GOG.COM!">
+                <a href="https://www.gog.com/en/game/quake_the_offering" target="_top" title="Get QUAKE for PC on GOG.COM!">
                     <img class="center" src="img/geo/getquake.gif" alt="Advertisement for the original Quake">
                 </a>
             </div>
@@ -215,16 +223,16 @@
                 <img class="center" src="img/geo/webring2.gif" alt="Webrings">
                 <p>Like what you see? Link to my page!</p>
             </div>
-
+            <!-- TODO: Add other students website -->
             <div style="justify-self: right; align-self: center;">
-                <a href="" title=""><img src="img/geo/back2.gif" alt="Last"></a>
+                <a href="https://mari-pucci.github.io" title="Mari's WC Page!"><img src="img/geo/back2.gif" alt="Last"></a>
             </div>
 
             <div class="center" style="padding: 10px; min-height: 10em">
                 <hr>
                 <h3>What's a <em>Webring?</em></h3>
                 <p>
-                    A <a href="https://en.wikipedia.org/wiki/Webring">webring</a> was a simple way for communities online to share each other's work.
+                    A <a href="https://en.wikipedia.org/wiki/Webring" target="_top">webring</a> was a simple way for communities online to share each other's work.
                     Before the age of shares and likes, people would link to eachothers websites &mdash; Not only would they link to each
                     other, they would organise the linking in such a way that each person in the webring would link
                     to a unique member. This way, nobody was left out!<br><br>
@@ -237,11 +245,11 @@
             </div>
 
             <div style="justify-self: left; align-self: center;">
-                <a href="" title=""><img src="img/geo/next2.gif" alt="Next"></a>
+                <a href="" title="Sarah's Gundam Page!"><img src="img/geo/next2.gif" alt="Next"></a>
             </div>
             <!-- Guestbooks -->
             <div class="full">
-                <a class="center" style="text-decoration: none;" href="https://bravenet.com" title="Bravenet Guestbooks - Would they still offer such a service?">
+                <a class="center" style="text-decoration: none;" href="https://bravenet.com" target="_top" title="Bravenet Guestbooks - Would they still offer such a service?">
                     <img src="img/geo/gb1.gif" alt="Bravenet Guestbooks">
                     <img src="img/geo/gb2.gif" alt="Bravenet Guestbooks">
                 </a>
@@ -261,11 +269,11 @@
         
             <!-- Some extra image ephemera -->
             <div>
-                <a href="https://geocity.ichi.city" title="Yahoo Geocities"><img src="img/geo/gc2.gif" alt="Yahoo GeoCities"></a>
-                <a href="https://www.youtube.com/watch?v=Xm5OiB3CPxg" title="Is your system Y2K-Ready?"><img src="img/geo/y2k.gif" alt="The year 2000"></a>
-                <a href="https://winamparchive.org" title="You ever heard of MP3s?"><img src="img/geo/winamp.gif" alt="Winamp"></a>
-                <a href="https://www.canada.ca/en.html" title="The greatest place to live."><img src="img/geo/proud.jpg" alt="Canadian Made" style="max-height: 31px"></a>
-                <a href="https://validator.w3.org" title="Are you verified? Get verified today!"><img src="img/geo/vcss.png" alt="W3C Verified"></a>
+                <a href="https://geocity.ichi.city" target="_top" title="Yahoo Geocities"><img src="img/geo/gc2.gif" alt="Yahoo GeoCities"></a>
+                <a href="https://www.youtube.com/watch?v=Xm5OiB3CPxg" target="_top" title="Is your system Y2K-Ready?"><img src="img/geo/y2k.gif" alt="The year 2000"></a>
+                <a href="https://winamparchive.org" target="_top" title="You ever heard of MP3s?"><img src="img/geo/winamp.gif" alt="Winamp"></a>
+                <a href="https://www.canada.ca/en.html" target="_top" title="The greatest place to live."><img src="img/geo/proud.jpg" alt="Canadian Made" style="max-height: 31px"></a>
+                <a href="https://validator.w3.org" target="_top" title="Are you verified? Get verified today!"><img src="img/geo/vcss.png" alt="W3C Verified"></a>
             </div>
         </section>
     </main>
@@ -289,18 +297,16 @@
                 what the internet was. GeoCities facilitated this earnestness by providing a <br>
                 platform for people to do whatever they want with web-design and explore their<br>
                 interests. This level of cusomisation feels much more personal than what online<br>
-                social interaction has become today.<br>
+                social interaction has become today, and was arguably one of the social medias of its time.<br>
                 <br>
                 &ThickSpace;&ThickSpace;Though I only caught the tail end of it personally, browsing through<br>
                 long-abandoned GeoCities pages and personal websites gives me a much more<br>
                 full understanding of what the creator was all about than any social-media<br>
                 page ever has.<br>
                 <br>
-                When GeoCities was discontinued in 2009, something special was certainly lost.
+                When GeoCities was discontinued in 2009, something special was lost.
             </p>
         </section>
     </footer>
-
 </body>
-
 </html>
