--- a/nscape.html
+++ b/nscape.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- The skeleton of this was taken from https://gist.github.com/opaeoh/5fcdadb5bb2f701c7a5a94d79f97f856 by opaeoh: https://github.com/opaeoh -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
             min-width: 100%; 
             min-height: 100%;
             z-index: 1;
-            overflow: hidden;
+            overflow: visible;
         }
 
         #clock {
@@ -38,6 +39,10 @@
             max-width: fit-content;
         }
     </style>
+
+
+
+
 </head>
 
 <body>
@@ -82,7 +87,7 @@
                 <div>
                     <button class="border-button" onclick="javascript:history.back()" title="Go from whence you came">Back</button>
                     <button class="border-button" onclick="javascript:history.forward()" title="Return to the page you came back from">Forward</button>
-                    <button class="border-button" onclick="javascript:window.location.reload();" title="Not loading properly? Refresh the page.">Reload</button>
+                    <button class="border-button" onclick="javascript:reloadFrame()" title="Not loading properly? Refresh the page.">Reload</button>
                     <button class="border-button" onclick="javascript:window.location.href = 'index.html';" title="Go back to the present (index page)">Home</button>
                     <!-- <span>&NonBreakingSpace;</span> -->
                     <!-- <span>&NonBreakingSpace;</span> -->
@@ -117,7 +122,7 @@
                 </div>
             </noscript> -->
 
-            <!-- The webpage content view -->
+            <!-- The webpage content view - goes to the landing page by default -->
             <div id="viewport" class="website-content">
                 <iframe id="web-iframe" src="landing.html"></iframe>
             </div>
@@ -160,6 +165,10 @@
         var addressField = document.getElementById("addressbar");
         var iconField = document.getElementById("iconfield");
 
+        function reloadFrame() {
+            webFrame.contentWindow.location.reload();
+        }
+
         function updateFrameHeight() {
             // Dirty hack to get iframes to fit the container:
             // set the height of the iframe as the height of the viewport
@@ -169,7 +178,7 @@
             // webFrame.style.height = viewport.offsetHeight + 'px';
             // webFrame.style.width = viewport.scrollWidth + 'px';
             webFrame.style.height = webFrame.contentWindow.document.documentElement.scrollHeight + 'px';
-            webFrame.style.width = webFrame.contentWindow.document.body.scrollWidth + 'px';
+            webFrame.style.width = webFrame.contentWindow.document.documentElement.scrollWidth + 'px';
         }
 
         function updateTitleFields() {
@@ -199,7 +208,7 @@
             updateTitleFields();
             updateURL();
             updateFavicon();
-            // Seems to be the cause of some security errors as
+            // Seems to be the cause of some security errors
             // window.scrollTo(0, 0);
         }
     </script>
