Fixed scrolling issues

--- a/early.html
+++ b/early.html
@@ -8,6 +8,12 @@
         body {
             background: #c0c0c0;
 			padding: 1em;
+			overflow: visible;
+			height: 100%;
+			max-width: 100%;
+			margin: 0 auto;
+			padding: 0 auto;
+			max-width: 1280px;
         }
     </style>
 </head>
@@ -20,7 +26,7 @@
     <hr>
     <p>
         But the idea is something like this: A fictional product page for a handheld camera from the early-to-mid 2000s sold by a spoof amalgam of Japanese consumer electronics brands.<br>
-        Lots of bitmap elements as page styling, rounded corners and shiny bezels on stuff - A throwback to the early days of webpages designed to wow people rather than really convey information effectively.<br>
+        Lots of bitmap elements as page styling, rounded corners and shiny bezels on stuff - A throwback to the early days of corporate webpages designed to wow people rather than really convey information effectively.<br>
     </p>
     <h4>Here's a good example</h4>
     <ul>
