--- a/future.html
+++ b/future.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusPro AI Companion</title>
+    <title>NexusProFutureWeb</title>
     <style>
         #id {
             color: blue;
