--- a/landing.html
+++ b/landing.html
@@ -14,7 +14,14 @@
         body {
             background: #c0c0c0;
 			padding: 1em;
+			overflow: visible;
+			height: 100%;
+			max-width: 100%;
+			margin: 0 auto;
+			padding: 0 auto;
+			max-width: 1280px;
         }
+
 		hr {
 			border: 2px inset #dddddd;
 			height: 2px;
