--- a/future.html
+++ b/future.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style rel="stylesheet" href="static/style_future.css">
     <title>NexusProFutureWeb</title>
     <style>
         #id {
